--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <br>
             <h3>C++ projects I have developed</h3>
             <br>
-            <a href="https://github.com/cvetelinna"> My GitHub profile</a>
+            <a class="gitBtn" href="https://github.com/cvetelinna"> My GitHub profile</a>
       </table>
     </div>
   </div>
